        - Add quote_names connection option. When set to true automatically
          sets quote_char and name_sep appropriate for your RDBMS
        - IC::DateTime support for MSSQL over DBD::ADO
        - Both the ::ODBC and ::ADO dispatchers now warn if a rdbms-specific
          driver is not found for this connection before falling back to
          plain ::Storage::DBI

    * Fixes
        - Fix exiting via next warnings from ResultSource
        - Fix ::Storage::DBI::* MRO problems on 5.8.x perls
        - Disable mysql_auto_reconnect for MySQL - depending on the ENV
          it sometimes defaults to on and causes major borkage on older
          DBD::mysql versions
        - Fix dropped bind values in select/group_by on Oracle (omission
          from 0542ec57 and 4c2b30d6)
        - Fix problems with M.A.D. under CGI::SpeedyCGI (RT#65131)
        - Better error handling when prepare() fails silently
        - Fixes skipped lines when a comment is followed by a statement
          when deploying a schema via sql file
        - Fix reverse_relationship_info on prototypical result sources
          (sources not yet registered with a schema)
        - Automatically require the requested cursor class before use
          (RT#64795)
        - Work around a Firebird ODBC driver bug exposed by DBD::ODBC 1.29

    * Misc
        - Only load Class::C3 and friends if necessary ($] < 5.010)
        - Greatly reduced loading of non-essential modules to aid startup
          time (mainly benefiting CGI users)

0.08127 2011-01-19 16:40 (UTC)
    * New Features / Changes
        - Schema/resultsource instances are now crossreferenced via a new
          system guaranteeing leak-free mutually assured destruction
        - DBIx::Class now warns when the user erroneously supplies
          AutoCommit => 0 to connect()
        - A warning is also issued before forcing the RaiseError
          setting of externally supplied DBI handles