@@ -7,6 +7,9 @@ Revision history for DBIx::Class
         - Both the ::ODBC and ::ADO dispatchers now warn if a rdbms-specific
           driver is not found for this connection before falling back to
           plain ::Storage::DBI
+        - populate() in void context now uses the multi-row INSERT
+          statement in MySQL. It will send 500 rows at one time. You can
+          change this behavior by setting ????
 
     * Fixes
         - Fix exiting via next warnings from ResultSource
